Improve waypoint add flows and feedback