@@ -40,11 +40,10 @@ public final class ActiveGroupManager {
     private final List<Runnable> dataListeners = new ArrayList<>();
 
     // Cached result of activeGroups(). The renderer calls this every frame from two
-    // separate END_MAIN handlers, so returning a fresh ArrayList each time burned a
-    // measurable chunk of young-gen garbage. Invalidated on zone change and on
-    // fireDataChanged(), which every mutation path funnels through.
+    // separate END_MAIN handlers, so rebuilding on every call burns avoidable
+    // young-gen garbage. Invalidated on zone change and on fireDataChanged(),
+    // which every mutation path funnels through.
     private List<WaypointGroup> cachedActive;
-    private final List<WaypointGroup> activeScratch = new ArrayList<>();
 
     public Zone currentZone() {
         return currentZone;
@@ -54,7 +53,7 @@ public final class ActiveGroupManager {
         if (Objects.equals(newZone, currentZone)) return;
         currentZone = newZone;
         cachedActive = null;
-        for (Consumer<Zone> l : zoneListeners) l.accept(newZone);
+        for (Consumer<Zone> l : List.copyOf(zoneListeners)) l.accept(newZone);
     }
 
     /**
@@ -79,12 +78,12 @@ public final class ActiveGroupManager {
             cachedActive = Collections.emptyList();
             return cachedActive;
         }
-        String zid = currentZone.id();
-        activeScratch.clear();
+        String zoneId = currentZone.id();
+        List<WaypointGroup> active = new ArrayList<>();
         for (WaypointGroup g : byId.values()) {
-            if (g.enabled() && zid.equals(g.zoneId())) activeScratch.add(g);
+            if (g.enabled() && zoneId.equals(g.zoneId())) active.add(g);
         }
-        cachedActive = Collections.unmodifiableList(activeScratch);
+        cachedActive = List.copyOf(active);
         return cachedActive;
     }
 
@@ -180,6 +179,7 @@ public final class ActiveGroupManager {
                 : "Temp -- " + source + " -- " + zone.displayName();
         WaypointGroup g = new WaypointGroup(tempId, groupName, zone.id());
         g.setLoadMode(WaypointGroup.LoadMode.STATIC);
+        g.setGradientMode(WaypointGroup.GradientMode.MANUAL);
         g.setTemp(true);
         add(g);
         return g;
@@ -246,6 +246,28 @@ public final class ActiveGroupManager {
         fireDataChanged();
     }
 
+    /**
+     * Add several groups as one logical mutation. Bulk import paths use this so
+     * autosave and external API listeners see a single completed import rather
+     * than one intermediate notification per group.
+     */
+    public void addAll(Collection<WaypointGroup> groups) {
+        if (groups.isEmpty()) return;
+        for (WaypointGroup group : groups) byId.put(group.id(), group);
+        fireDataChanged();
+    }
+
+    /**
+     * Replace all persisted groups in one mutation after the caller has fully
+     * validated the replacement set. Storage load uses this to avoid clearing
+     * the live manager until malformed files have already been rejected.
+     */
+    public void replaceAll(Collection<WaypointGroup> groups) {
+        byId.clear();
+        for (WaypointGroup group : groups) byId.put(group.id(), group);
+        fireDataChanged();
+    }
+
     public void remove(String id) {
         if (byId.remove(id) != null) fireDataChanged();
     }
@@ -257,9 +279,12 @@ public final class ActiveGroupManager {
 
     public void fireDataChanged() {
         cachedActive = null;
-        for (Runnable l : dataListeners) l.run();
+        for (Runnable l : List.copyOf(dataListeners)) l.run();
     }
 
     public void addZoneListener(Consumer<Zone> listener) { zoneListeners.add(listener); }
+    public void removeZoneListener(Consumer<Zone> listener) { zoneListeners.remove(listener); }
+
     public void addDataListener(Runnable listener)        { dataListeners.add(listener); }
+    public void removeDataListener(Runnable listener)     { dataListeners.remove(listener); }
 }
